// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Avatar renders with image 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
      Object {
        "backgroundColor": "#F5F5F5",
      },
    ]
  }
>
  <Image
    source={
      Object {
        "uri": "http://www.fillmurray.com/200/300",
      }
    }
    style={
      Object {
        "height": 40,
        "width": 40,
      }
    }
  />
</View>
`;

exports[`Avatar renders without default canvas avatar 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 13,
        },
      ]
    }
  >
    LL
  </Text>
</View>
`;

exports[`Avatar renders without image 1`] = `
<View
  accessibilityLabel=""
  style={
    Array [
      Object {
        "alignItems": "center",
        "backgroundColor": "white",
        "borderColor": "#C7CDD1",
        "borderWidth": 0.5,
        "justifyContent": "center",
        "overflow": "hidden",
      },
      Object {
        "borderRadius": 20,
        "height": 40,
        "width": 40,
      },
    ]
  }
>
  <Text
    accessible={true}
    allowFontScaling={true}
    disabled={false}
    ellipsizeMode="tail"
    style={
      Array [
        Object {
          "backgroundColor": "transparent",
          "fontWeight": "600",
        },
        Object {
          "fontSize": 13,
        },
      ]
    }
  >
    LL
  </Text>
</View>
`;
